Table authors {
  id uuid [pk]
  name varchar [not null]
  slug
  info text
}

Table books {
  id uuid [pk]
  title varchar [not null]
  slug
  series_title
  cover_image varchar
  description text
  status varchar
  deleted_at timestamp
  created_at timestamp
  updated_at timestamp
}

Table series {
    id
    title
    slug
    description
    deleted_at timestamp
    created_at timestamp
    updated_at timestamp
}

Table series_books {
    id
    series_id
    book_id
}

Table author_books {
  id uuid [pk]
  book_id uuid [ref: > books.id]
  author_id uuid [ref: > authors.id]
}

Table formats {
  id uuid [pk]
  name varchar
}

Table book_formats {
  id uuid [pk]
  book_id uuid [ref: > books.id]
  format_id uuid [ref: > formats.id]
}

Table genres {
  id uuid [pk]
  name varchar [not null]
  slug
}

Table book_genres {
  id uuid [pk]
  book_id uuid [ref: > books.id]
  genre_id uuid [ref: > genres.id]
}

Table statutes {
  uuid [pk]
  name varchar
}

Table ratings {
  id uuid [pk]
  user_id [ref: = users.id]
  book_id [ref: = books.id]
  rating int
}
